crates/aranya-policy-lang/tests/data/error_line_number_in_chunks/two_chunk_custom_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
   |
11 |     let y = "a\0b"
   |               ^^ unknown character escape: `0`
